# TempDD

./: LICENSE  README.md  pyproject.toml
customized/: README.md
customized/workflow_example/: config.yaml
customized/workflow_example/templates/: tasks.md
docs/: operating-principles.md  test_guideline.md
docs/readmes/: README-es.md  README-ja.md  README-zh-CN.md  README-zh-TW.md
tempdd/: __init__.py  cli.py  controller.py  file_manager.py  template_parser.py  utils.py
tempdd/core/: default_config.json
tempdd/core/configs/: config_default.json  config_default.yaml  config_simple.json  config_simple.yaml
tempdd/core/controllers/: base.py  controller_default.py  controller_simple.py
tempdd/core/templates/: template_arch_default.md  template_blueprint_default.md  template_blueprint_simple.md  template_prd_default.md  template_research_default.md  template_tasks_default.md
tempdd/handlers/: __init__.py  ai.py  help.py  init.py  ui_helpers.py
tempdd/integrations/claude/.claude/commands/: tempdd.md
tempdd/integrations/claudecode/commands/: tempdd.md
tempdd/integrations/cursor/.cursor/commands/: tempdd-go.md
tempdd/integrations/gemini/.gemini/commands/: tempdd.toml
tests/: __init__.py  conftest.py  test_commands.py  test_controller.py  test_template_parser.py
